[gd_scene load_steps=2 format=3 uid="uid://dypetselect"]

[ext_resource type="Script" path="res://game/scripts/ui/PetSelectionUI.gd" id="1_script"]

[node name="PetSelectionUI" type="CanvasLayer"]
layer = 15
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
text = "Choose Your Companion"
horizontal_alignment = 1

[node name="PetContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -180.0
offset_top = 70.0
offset_right = 180.0
offset_bottom = 140.0
grow_horizontal = 2
alignment = 1

[node name="DescriptionLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 150.0
offset_right = 150.0
offset_bottom = 240.0
grow_horizontal = 2
text = "Select a pet to see details"
horizontal_alignment = 1

[node name="ConfirmButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -50.0
offset_right = 60.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "Confirm"

[node name="FadeRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)
